# logshield-ai

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.infra.yml  pyproject.toml
.github/workflows/: ci.yml
deployment/: deployment.yaml  grafana-dashboard.json  grafana-dashboards.yml  hpa.yaml  prometheus.yml
deployment/helm/: Chart.yaml  values.yaml
deployment/helm/templates/: deploy.yaml
docs/: architecture.md  dev-log-2026-07-15.md  dev-log-2026-07-16.md  dev-log-2026-07-17.md  dev-log-2026-07-20.md  dev-log-2026-07-21.md  dev-log-2026-07-22.md
load-testing/: k6-script.js  locustfile.py
logshield/: __init__.py  alerting.py  anomaly.py  benchmark.py  classify.py  cli.py  clustering.py  config.py  embeddings.py  engine.py  errors.py  feature_store.py  logging_setup.py  mockdata.py  models.py  storage.py  tokenizer.py
logshield/parsing/: __init__.py  drain.py  masking.py
logshield/serving/: __init__.py  api.py  dashboard.py
logshield/streaming/: __init__.py  bus.py  worker.py
scripts/: generate_mock_logs.py
src/ingestion/: Cargo.toml
src/ingestion/src/: main.rs
src/streaming-bus/: topics.yaml
tests/: test_api_cli.py  test_core.py  test_engine.py  test_parsing.py
