[package]
name = "logshield-ingestion"
version = "0.1.0"
edition = "2021"
description = "High-throughput, stateless log receiver that writes to Kafka"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.36", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "receiver"
path = "src/main.rs"
